--- a/styles.css
+++ b/styles.css
@@ -362,27 +362,27 @@ footer {
     }
 }
 
-/* Estilo para o pop-up */
+/* Estilos do Popup */
 .popup {
-    display: none; /* Inicialmente escondido */
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Fundo escuro */
-    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.7);
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 
 .popup-content {
-    background-color: #ffffff; /* Fundo branco */
-    padding: 20px;
+    background: white;
+    padding: 25px;
     border-radius: 15px;
-    text-align: center;
-    width: 300px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    position: relative;
+    max-width: 400px;
+    width: 90%;
 }
 
 .popup h2 {
